--- a/docs/facturacion.mdx
+++ b/docs/facturacion.mdx
@@ -2,83 +2,78 @@
 sidebar_position: 2
 ---
 
+import {SeleccionOrganismo, InputRFC, DatosFiscales, DatosContactos, InputFolios} from "@site/src/components/Items";
+
+import ImageDiv from "@site/src/components/ImageDiv";
+
 # Facturación
 
 **Arquos Facturame** te permite generar tu CFDI de manera rápida y sencilla. A continuación, te explicamos cómo utilizar este módulo.
 
-## Selección de organismo *
+## Selección de organismo
 
-Para comenzar, debes seleccionar el organismo al que pertenecen los tickets que deseas facturar.
+<SeleccionOrganismo />
 
-**Imagen**
+## Agregar RFC
 
-En caso de que no aparezca este selector de organismos, no tienes que preocuparte, sigue con los siguientes pasos.
+<InputRFC />
 
-## Agregar RFC *
+## Datos fiscales
 
-A continuación, debes ingresar el RFC al que se hará el CFDI. Es muy importante que el RFC sea correcto, ya que este dato es fundamental para la elaboración del CFDI.
+<DatosFiscales />
 
-***Imagen**
+## Datos de contacto
 
-## Datos Fiscales *
+<DatosContactos />
 
-En la siguiente sección, deberás ingresar tus datos fiscales. Estos datos son necesarios para la elaboración del CFDI y deben ser correctos. Asegúrate de ingresar tu razón social, código postal, régimen fiscal y uso de CFDI.
+## Captura de folios
 
-**Imagen**
+<InputFolios />
 
-## Datos de contacto *
-
-En esta sección, deberás ingresar tus datos de contacto. Estos datos son importantes para que puedas recibir tu CFDI por correo electrónico y para que puedas ser contactado en caso de ser necesario. Asegúrate de ingresar un correo electrónico válido y un número de teléfono.
-
-**Imagen**
-
-## Captura de folios *
-
-En la siguiente sección, deberás ingresar el o los folios de los tickets que deseas facturar. Puedes ingresar varios folios, uno a la vez. Deberás ingresar al menos un folio para poder generar tu CFDI.
-
-**Imagen**
-
-Asegúrate de ingresar los folios correctamente, ya que estos datos son necesarios para la elaboración del CFDI, si tienes dudas de donde encontrar los folios, puedes precionar el botón de ayuda que se encuentra al lado del campo de texto, este te mostrará una imagen de ejemplo de donde encontrar los folios en tus tickets.
-
-**Imagen**
-
-Al ingresar un folio, el sistema verificará si el folio es válido y si aún no ha sido facturado. Si el folio es válido y esta disponible para facturación, se mostrarán los datos del folio, incluyendo el monto total y la fecha de emisión del ticket. 
-
-**Imagen**
-
-Si deseas eliminar un folio ingresado, puedes hacerlo presionando el botón de eliminar que se encuentra al lado del folio.
-
-**Imagen**
-
-Si el folio ya ha sido facturado, se mostrará un mensaje indicando que el folio ya ha sido utilizado.
-
-**Imagen**
---
 Una vez que hayas ingresado todos los folios que deseas facturar, presiona el botón de "Siguiente" para continuar con el proceso de generación del CFDI.
 
 ## Selección de forma de pago
 
 En esta sección, deberás seleccionar la forma de pago que utilizaste para realizar el pago de los tickets. En caso de que tus tickets los hayas pagado con formas de pago diferentes entre sí, se recomienda que generes un CFDI por cada forma de pago utilizada.
 
-**Imagen**
+<ImageDiv
+        src="/img/arquos_facturame/facturacion/select-forma-pago.png"
+        alt="Seleccionar Forma de Pago"
+      />
 
 ## Verificación de datos
 
-**Imagen**
+<ImageDiv
+        src="/img/arquos_facturame/facturacion/detalle.png"
+        alt="Verificación de detalle"
+      />
 
 ### Revisión de datos fiscales
 
 En esta sección, podrás revisar los datos fiscales que ingresaste anteriormente. Asegúrate de que todos los datos sean correctos, ya que estos datos serán utilizados para la generación del CFDI. En caso de que necesites realizar alguna modificación, puedes hacerlo presionando el botón de "Atrás".
 
+<ImageDiv
+        src="/img/arquos_facturame/facturacion/resumen-factura.png"
+        alt="Verificación de Datos"
+      />
+
 ### Botón atrás
 
 Este botón te permitirá regresar a la sección anterior para realizar modificaciones en los datos ingresados.
+
+<ImageDiv
+        src="/img/arquos_facturame/facturacion/btn-atras.png"
+        alt="Botón Atrás"
+      />
 
 ### Botón de vista previa
 
 Este botón te permitirá ver una vista previa del CFDI que se generará.
 
-**Imagen**
+<ImageDiv
+        src="/img/arquos_facturame/facturacion/btn-vista-previa.png"
+        alt="Botón vista previa"
+      />
 
 ### Botón de facturación
 
@@ -90,10 +85,21 @@ Este botón te permitirá generar el CFDI. Al presionarlo, se iniciará el proce
 
 Una vez que el CFDI ha sido generado, recibirás un correo electrónico con el CFDI en formato XML y PDF adjunto. Asegúrate de revisar tu bandeja de entrada y tu carpeta de spam.
 
-**Imagen**
+<ImageDiv
+        src="/img/arquos_facturame/facturacion/email-1.png"
+        alt="Email"
+      />
+
+<ImageDiv
+        src="/img/arquos_facturame/facturacion/email-2.png"
+        alt="Email"
+      />
 
 ### Redirección a consultar CFDI
 
 Una vez que hayas generado tu CFDI, serás redirigido al módulo de [Consultar CFDI](/docs/consultar-cfdi), donde podrás ver el CFDI y descargarlo si es necesario.
 
-**Imagen**
+<ImageDiv
+        src="/img/arquos_facturame/facturacion/btn-facturar-1.png"
+        alt="Facturación Exitosa"
+      />
