--- a/src/components/Items/input-folios.mdx
+++ b/src/components/Items/input-folios.mdx
@@ -7,14 +7,14 @@ src="/img/arquos_facturame/items/input-folios.png"
 alt="Captura de Folios"
 />
 
-Asegúrate de ingresar los folios correctamente, ya que estos datos son necesarios para la elaboración del CFDI, si tienes dudas de donde encontrar los folios, puedes precionar el botón de ayuda que se encuentra al lado del campo de texto, este te mostrará una imagen de ejemplo de donde encontrar los folios en tus tickets.
+Asegúrate de ingresar los folios correctamente, ya que estos datos son necesarios para la elaboración del CFDI, si tienes dudas de donde encontrar los folios, puedes presionar el botón de ayuda que se encuentra al lado del campo de texto, este te mostrará una imagen de ejemplo de donde encontrar los folios en tus tickets.
 
 <ImageDiv
 src="/img/arquos_facturame/items/input-folios-help.png"
 alt="Captura de Folios - Ayuda"
 />
 
-Al ingresar un folio, el sistema verificará si el folio es válido y si aún no ha sido facturado. Si el folio es válido y esta disponible para facturación, se mostrarán los datos del folio, incluyendo el monto total y la fecha de emisión del ticket. 
+Al ingresar un folio, el sistema verificará si el folio es válido y si aún no ha sido facturado. Si el folio es válido y está disponible para facturación, se mostrarán los datos del folio, incluyendo el monto total y la fecha de emisión del ticket.
 
 <ImageDiv
 src="/img/arquos_facturame/items/result-folios.png"
